--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "d3": "^7.6.1",
     "pinia": "^2.0.14",
+    "sass": "^1.53.0",
     "vue": "^3.2.37",
     "vue-chartjs": "^4.1.1",
     "vue-router": "^4.0.16"
