--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "d3": "^7.6.1",
-    "pinia": "^2.0.14",
+    "chart.js": "^3.8.2",
     "sass": "^1.53.0",
     "vue": "^3.2.37",
-    "vue-chartjs": "^4.1.1",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
