--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.7",
     "chart.js": "^3.8.2",
     "sass": "^1.53.0",
     "vue": "^3.2.37",
